--- a/Next/devoverflow/package.json
+++ b/Next/devoverflow/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@clerk/nextjs": "^5.0.6",
     "@tailwindcss/typography": "^0.5.13",
+    "ant-design": "^1.0.0",
+    "antd": "^5.17.0",
+    "html-react-parser": "^5.1.10",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.3.5",
     "next": "14.2.3",
     "prettier": "^3.2.5",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "svix": "^1.24.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
